# omgwtf8

./: .gitignore  .travis.yml  Cargo.toml  README.md
src/: cmp.rs  conv.rs  lib.rs  matching.rs  pattern.rs  slice.rs
